chore: add extract token addresses from token transfers job

--- a/notebooks/tx-volumne-calculation.ipynb
+++ b/notebooks/tx-volumne-calculation.ipynb
@@ -13,15 +13,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d5038e7a",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "23/06/20 02:28:12 WARN SparkSession: Using an existing Spark session; only runtime SQL configurations will take effect.\n"
+      "Warning: Ignoring non-Spark config property: fs.s3a.endpoint\n",
+      "Warning: Ignoring non-Spark config property: fs.s3a.access.key\n",
+      "Warning: Ignoring non-Spark config property: fs.s3a.secret.key\n",
+      "WARNING: An illegal reflective access operation has occurred\n",
+      "WARNING: Illegal reflective access by org.apache.spark.unsafe.Platform (file:/usr/local/spark-3.1.2-bin-hadoop3.2/jars/spark-unsafe_2.12-3.1.2.jar) to constructor java.nio.DirectByteBuffer(long,int)\n",
+      "WARNING: Please consider reporting this to the maintainers of org.apache.spark.unsafe.Platform\n",
+      "WARNING: Use --illegal-access=warn to enable warnings of further illegal reflective access operations\n",
+      "WARNING: All illegal access operations will be denied in a future release\n",
+      "23/06/20 04:18:25 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n",
+      "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
      ]
     }
    ],
@@ -30,14 +41,30 @@
     "    .builder \\\n",
     "    .config(\"fs.s3a.access.key\", \"Q3AM3UQ867SPQQA43P2F\") \\\n",
     "    .config(\"fs.s3a.secret.key\", \"zuf+tfteSlswRu7BJ86wekitnifILbZam1KYY3TG\") \\\n",
-    "    .config(\"fs.s3a.endpoint\", \"play.min.io:9000\") \\\n",
+    "    .config(\"fs.s3a.endpoint\", \"https://play.min.io:9000\") \\\n",
     "    .appName(\"VolumeCalculation\") \\\n",
     "    .getOrCreate()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "id": "ee7386a2-1673-4783-9cd3-02da8ffee356",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sc = spark.sparkContext\n",
+    "\n",
+    "sc._jsc.hadoopConfiguration().set(\"fs.s3a.connection.ssl.enabled\", \"true\")\n",
+    "sc._jsc.hadoopConfiguration().set(\"fs.s3a.path.style.access\", \"true\")\n",
+    "sc._jsc.hadoopConfiguration().set(\"fs.s3a.attempts.maximum\", \"1\")\n",
+    "sc._jsc.hadoopConfiguration().set(\"fs.s3a.connection.establish.timeout\", \"5000\")\n",
+    "sc._jsc.hadoopConfiguration().set(\"fs.s3a.connection.timeout\", \"10000\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "6818398e",
    "metadata": {},
    "outputs": [],
@@ -55,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "5cd289cc",
    "metadata": {},
    "outputs": [],
@@ -81,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "878be1e6",
    "metadata": {},
    "outputs": [],
@@ -98,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "7b718273",
    "metadata": {},
    "outputs": [],
@@ -121,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "6a0ef2a9",
    "metadata": {},
    "outputs": [],
@@ -131,10 +158,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "bcf79fc0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "23/06/20 04:19:41 WARN MetricsConfig: Cannot locate configuration: tried hadoop-metrics2-s3a-file-system.properties,hadoop-metrics2.properties\n"
+     ]
+    }
+   ],
    "source": [
     "token_transfers_df = spark.read.format(\"csv\") \\\n",
     "    .option(\"header\", True) \\\n",
@@ -144,8 +179,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "0f5c9a29",
+   "execution_count": 12,
+   "id": "bb47a3d3-3d22-42dc-8660-75fffdae4abc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "b3223535",
    "metadata": {},
    "outputs": [],
@@ -170,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "6e33c0cb",
    "metadata": {},
    "outputs": [],
@@ -183,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "fd02ab5e",
    "metadata": {},
    "outputs": [
@@ -215,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "b4862479",
    "metadata": {},
    "outputs": [],
@@ -228,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "16a4e626",
    "metadata": {},
    "outputs": [],
@@ -244,36 +279,50 @@
     "\"\"\")\n",
     "\n",
     "token_df = token_volume_result_df \\\n",
-    "    .withColumn('tx_volume', token_volume_result_df['tx_volume'].cast(DecimalType(38, 0))) \\\n",
+    "    .withColumn('tx_volume', token_volume_result_df['tx_volume'].cast(DecimalType(38, 6))) \\\n",
     "    .withColumnRenamed(\"token_address\",\"address\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "8e424257",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 17:===================================================>    (11 + 1) / 12]\r"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------------------------------------------+----------+---------+\n",
-      "|address                                   |timestamp |tx_volume|\n",
-      "+------------------------------------------+----------+---------+\n",
-      "|0x2170ed0880ac9a755fd29b2688956bd959f933f8|1685318399|1054769  |\n",
-      "|0x9c65ab58d8d978db963e63f2bfb7121627e3a739|1685318399|14030    |\n",
-      "|0xbf5140a22578168fd562dccf235e5d43a02ce9b1|1685318399|21100    |\n",
-      "|0x02caa44eb838fc0e49b73213d9d22e5f23798fda|1685318399|365      |\n",
-      "|0x4338665cbb7b2485a8855a139b75d5e34ab0db94|1685318399|161      |\n",
-      "|0x156ab3346823b651294766e23e6cf87254d68962|1685318399|24406590 |\n",
-      "|0xe552fb52a4f19e44ef5a967632dbc320b0820639|1685318399|1        |\n",
-      "|0xba2ae424d960c26247dd6c32edc70b295c744c43|1685318399|101832   |\n",
-      "|0x14016e85a25aeb13065688cafb43044c2ef86784|1685318399|5707     |\n",
-      "|0xaf53d56ff99f1322515e54fdde93ff8b3b7dafd5|1685318399|1        |\n",
-      "+------------------------------------------+----------+---------+\n",
+      "+------------------------------------------+----------+---------------+\n",
+      "|address                                   |timestamp |tx_volume      |\n",
+      "+------------------------------------------+----------+---------------+\n",
+      "|0x2170ed0880ac9a755fd29b2688956bd959f933f8|1685318399|1054768.605324 |\n",
+      "|0xfce146bf3146100cfe5db4129cf6c82b0ef4ad8c|1685318399|0.000047       |\n",
+      "|0x9c65ab58d8d978db963e63f2bfb7121627e3a739|1685318399|14030.151616   |\n",
+      "|0xa4080f1778e69467e905b8d6f72f6e441f9e9484|1685318399|1657.252888    |\n",
+      "|0xbf5140a22578168fd562dccf235e5d43a02ce9b1|1685318399|21100.271899   |\n",
+      "|0x02caa44eb838fc0e49b73213d9d22e5f23798fda|1685318399|364.769479     |\n",
+      "|0x9fb9a33956351cf4fa040f65a13b835a3c8764e3|1685318399|223.021360     |\n",
+      "|0x4338665cbb7b2485a8855a139b75d5e34ab0db94|1685318399|161.363328     |\n",
+      "|0x156ab3346823b651294766e23e6cf87254d68962|1685318399|24406589.595120|\n",
+      "|0xe552fb52a4f19e44ef5a967632dbc320b0820639|1685318399|0.743871       |\n",
+      "+------------------------------------------+----------+---------------+\n",
       "only showing top 10 rows\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
      ]
     }
    ],
@@ -283,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "483d5ef1",
    "metadata": {},
    "outputs": [],
@@ -299,36 +348,50 @@
     "\"\"\")\n",
     "\n",
     "from_df = from_address_volume_result_df \\\n",
-    "    .withColumn('tx_volume', from_address_volume_result_df['tx_volume'].cast(DecimalType(38, 0))) \\\n",
+    "    .withColumn('tx_volume', from_address_volume_result_df['tx_volume'].cast(DecimalType(38, 6))) \\\n",
     "    .withColumnRenamed(\"from_address\",\"address\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "40df7523",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 32:========================================>            (152 + 12) / 200]\r"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------------------------------------------+----------+---------+\n",
-      "|address                                   |timestamp |tx_volume|\n",
-      "+------------------------------------------+----------+---------+\n",
-      "|0x344ecc034d92db380a219d4345f2d1690d22e11b|1685318399|29       |\n",
-      "|0x7623a96f97ee37c50405b1bd162ff9bc380f7b60|1685318399|211      |\n",
-      "|0xc108a9e4e1b4e2db4ac5a43bdda75f126d634caf|1685318399|219      |\n",
-      "|0x914558fddb93aa9b32b0e8e662673515b0f2e4ae|1685318399|823      |\n",
-      "|0xc2b3dbbf26d43617036b0eba53ad2dbd945adebf|1685318399|834104   |\n",
-      "|0x0c59a054d7ec1248c1f84fd88030ac00baa71622|1685318399|282      |\n",
-      "|0x63e95e19f24a7675d8adbd6f38d3c0f77bf87185|1685318399|9989     |\n",
-      "|0x9fe0d567c52663d371477b27d216b6d20d260a4d|1685318399|0        |\n",
-      "|0x2641bc9d55daf3ce52a06fa9d307c989951a5a03|1685318399|5583     |\n",
-      "|0x00692189a7f61483bdb67f11ec28197fae9d7755|1685318399|9105     |\n",
-      "+------------------------------------------+----------+---------+\n",
+      "+------------------------------------------+----------+-----------+\n",
+      "|address                                   |timestamp |tx_volume  |\n",
+      "+------------------------------------------+----------+-----------+\n",
+      "|0x344ecc034d92db380a219d4345f2d1690d22e11b|1685318399|29.285650  |\n",
+      "|0x914558fddb93aa9b32b0e8e662673515b0f2e4ae|1685318399|822.841602 |\n",
+      "|0x76f4a2cd95bf5a0754011998ad893f55bb079a72|1685318399|1343.790739|\n",
+      "|0x3b756446c61b4702b34475022ae1851ba1a36691|1685318399|0.000000   |\n",
+      "|0xd6ff684aa01b676d0cc7cbc40a154dbf9d3d3079|1685318399|265.432143 |\n",
+      "|0x3d6d3ff403d82afb0673ae4182dfb1ad7ecbe5a8|1685318399|200.110599 |\n",
+      "|0x27bbe1d6c6b04694a94b2280ab5c424f54527b01|1685318399|300.165899 |\n",
+      "|0x95c95656f694a665cadc98b3f2d5da44f3404e81|1685318399|0.122929   |\n",
+      "|0xc108a9e4e1b4e2db4ac5a43bdda75f126d634caf|1685318399|219.351533 |\n",
+      "|0x88eb5797d4fd1adb62a8d73b2ba146c46d9e245d|1685318399|1.196090   |\n",
+      "+------------------------------------------+----------+-----------+\n",
       "only showing top 10 rows\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
      ]
     }
    ],
@@ -338,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "id": "74b4ec8d",
    "metadata": {},
    "outputs": [],
@@ -354,36 +417,50 @@
     "\"\"\")\n",
     "\n",
     "to_df = to_address_volume_result_df \\\n",
-    "    .withColumn('tx_volume', to_address_volume_result_df['tx_volume'].cast(DecimalType(38, 0))) \\\n",
+    "    .withColumn('tx_volume', to_address_volume_result_df['tx_volume'].cast(DecimalType(38, 6))) \\\n",
     "    .withColumnRenamed(\"to_address\",\"address\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "id": "671fe8ba",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 38:======================================>              (146 + 12) / 200]\r"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------------------------------------------+----------+---------+\n",
-      "|address                                   |timestamp |tx_volume|\n",
-      "+------------------------------------------+----------+---------+\n",
-      "|0x8126a1c71e1b5562393f65c8fe911d0c0352af72|1685318399|0        |\n",
-      "|0x84623f450a0af538ae3a52539633d784b664dad1|1685318399|1        |\n",
-      "|0x074eb000792e3710c864f8bf2478afc8df92d8cb|1685318399|0        |\n",
-      "|0x56ed0f243c8bd05c84ede4dafcafa69d1cec7240|1685318399|0        |\n",
-      "|0x04442b93e0ae32f1aa197bbc94e0b7fcf08a8524|1685318399|28       |\n",
-      "|0xc2b3dbbf26d43617036b0eba53ad2dbd945adebf|1685318399|402939   |\n",
-      "|0x62679a86f0f537a2b4e40af3305f5cee742750d9|1685318399|55       |\n",
-      "|0x92e4203baadb385d1355d3b5a822a084337749cf|1685318399|0        |\n",
-      "|0x8df5e62c8c77434547bbf3dd7528e550e80b1734|1685318399|465      |\n",
-      "|0x277cdce833e22d68bcddd504aef3a31ca7c584f8|1685318399|54       |\n",
-      "+------------------------------------------+----------+---------+\n",
+      "+------------------------------------------+----------+-----------+\n",
+      "|address                                   |timestamp |tx_volume  |\n",
+      "+------------------------------------------+----------+-----------+\n",
+      "|0x2641bc9d55daf3ce52a06fa9d307c989951a5a03|1685318399|5583.014773|\n",
+      "|0x56ed0f243c8bd05c84ede4dafcafa69d1cec7240|1685318399|0.000000   |\n",
+      "|0xab78ba5e13bc29c742aba5bb7ebcc0cdc6969db5|1685318399|99.745186  |\n",
+      "|0x44f354aa259023b929b7a7b6d168259902334e31|1685318399|0.000000   |\n",
+      "|0x277cdce833e22d68bcddd504aef3a31ca7c584f8|1685318399|53.731171  |\n",
+      "|0x3538e99b0ad36179ecd8c1815664bbc56208e468|1685318399|0.000000   |\n",
+      "|0x317f03573b16b993c469473b0c8dc564df1db18c|1685318399|51.365714  |\n",
+      "|0x88eb5797d4fd1adb62a8d73b2ba146c46d9e245d|1685318399|0.001592   |\n",
+      "|0x04442b93e0ae32f1aa197bbc94e0b7fcf08a8524|1685318399|28.107658  |\n",
+      "|0x8df5e62c8c77434547bbf3dd7528e550e80b1734|1685318399|465.070860 |\n",
+      "+------------------------------------------+----------+-----------+\n",
       "only showing top 10 rows\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
      ]
     }
    ],
@@ -393,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "id": "3b65d0a9",
    "metadata": {},
    "outputs": [],
@@ -403,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "id": "3072718e",
    "metadata": {},
    "outputs": [
@@ -411,27 +488,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 136:==================================================>    (11 + 1) / 12]\r"
+      "[Stage 48:========================================>            (153 + 12) / 200]\r"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------------------------------------------+----------+---------+\n",
-      "|address                                   |timestamp |tx_volume|\n",
-      "+------------------------------------------+----------+---------+\n",
-      "|0x2170ed0880ac9a755fd29b2688956bd959f933f8|1685318399|1054769  |\n",
-      "|0x9c65ab58d8d978db963e63f2bfb7121627e3a739|1685318399|14030    |\n",
-      "|0xbf5140a22578168fd562dccf235e5d43a02ce9b1|1685318399|21100    |\n",
-      "|0x02caa44eb838fc0e49b73213d9d22e5f23798fda|1685318399|365      |\n",
-      "|0x4338665cbb7b2485a8855a139b75d5e34ab0db94|1685318399|161      |\n",
-      "|0x156ab3346823b651294766e23e6cf87254d68962|1685318399|24406590 |\n",
-      "|0xe552fb52a4f19e44ef5a967632dbc320b0820639|1685318399|1        |\n",
-      "|0xba2ae424d960c26247dd6c32edc70b295c744c43|1685318399|101832   |\n",
-      "|0x14016e85a25aeb13065688cafb43044c2ef86784|1685318399|5707     |\n",
-      "|0xaf53d56ff99f1322515e54fdde93ff8b3b7dafd5|1685318399|1        |\n",
-      "+------------------------------------------+----------+---------+\n",
+      "+------------------------------------------+----------+---------------+\n",
+      "|address                                   |timestamp |tx_volume      |\n",
+      "+------------------------------------------+----------+---------------+\n",
+      "|0x2170ed0880ac9a755fd29b2688956bd959f933f8|1685318399|1054768.605324 |\n",
+      "|0xfce146bf3146100cfe5db4129cf6c82b0ef4ad8c|1685318399|0.000047       |\n",
+      "|0x9c65ab58d8d978db963e63f2bfb7121627e3a739|1685318399|14030.151616   |\n",
+      "|0xa4080f1778e69467e905b8d6f72f6e441f9e9484|1685318399|1657.252888    |\n",
+      "|0xbf5140a22578168fd562dccf235e5d43a02ce9b1|1685318399|21100.271899   |\n",
+      "|0x02caa44eb838fc0e49b73213d9d22e5f23798fda|1685318399|364.769479     |\n",
+      "|0x9fb9a33956351cf4fa040f65a13b835a3c8764e3|1685318399|223.021360     |\n",
+      "|0x4338665cbb7b2485a8855a139b75d5e34ab0db94|1685318399|161.363328     |\n",
+      "|0x156ab3346823b651294766e23e6cf87254d68962|1685318399|24406589.595120|\n",
+      "|0xe552fb52a4f19e44ef5a967632dbc320b0820639|1685318399|0.743871       |\n",
+      "+------------------------------------------+----------+---------------+\n",
       "only showing top 10 rows\n",
       "\n"
      ]
@@ -440,7 +517,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
       "                                                                                \r"
      ]
     }
@@ -455,7 +531,12 @@
    "id": "edecb8d5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# result_df.repartition(1) \\\n",
+    "#     .write \\\n",
+    "#     .option(\"header\",True) \\\n",
+    "#     .csv(basePath + \"/tx-volumes/\")"
+   ]
   }
  ],
  "metadata": {
@@ -474,7 +555,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
