chore: update tx-volume-calculation job

--- a/notebooks/tx-volumne-calculation.ipynb
+++ b/notebooks/tx-volumne-calculation.ipynb
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "6818398e",
    "metadata": {},
    "outputs": [],
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "5cd289cc",
    "metadata": {},
    "outputs": [],
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "878be1e6",
    "metadata": {},
    "outputs": [],
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "7b718273",
    "metadata": {},
    "outputs": [],
@@ -148,7 +148,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 32,
+   "id": "b3a7e3c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cmc_address_schema = StructType([ \\\n",
+    "    StructField(\"rank\", LongType(), True), \\\n",
+    "    StructField(\"bsc\", StringType(), True), \\\n",
+    "    StructField(\"eth\", StringType(), True), \\\n",
+    "    StructField(\"polygon\", StringType(), True), \\\n",
+    "  ])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "6a0ef2a9",
    "metadata": {},
    "outputs": [],
@@ -158,18 +173,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "bcf79fc0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "23/06/20 04:19:41 WARN MetricsConfig: Cannot locate configuration: tried hadoop-metrics2-s3a-file-system.properties,hadoop-metrics2.properties\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "token_transfers_df = spark.read.format(\"csv\") \\\n",
     "    .option(\"header\", True) \\\n",
@@ -179,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "bb47a3d3-3d22-42dc-8660-75fffdae4abc",
    "metadata": {},
    "outputs": [],
@@ -192,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "b3223535",
    "metadata": {},
    "outputs": [],
@@ -205,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "6e33c0cb",
    "metadata": {},
    "outputs": [],
@@ -218,39 +225,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "fd02ab5e",
+   "execution_count": 33,
+   "id": "543130c3",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>\n",
-       "div.output_area pre {\n",
-       "    white-space: pre;\n",
-       "}\n",
-       "</style>\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "%%html\n",
-    "<style>\n",
-    "div.output_area pre {\n",
-    "    white-space: pre;\n",
-    "}\n",
-    "</style>"
+    "cmc_addresses_df = spark.read.format(\"csv\") \\\n",
+    "    .option(\"header\", True) \\\n",
+    "    .schema(cmc_address_schema) \\\n",
+    "    .load(basePath + \"/cmc_addresses/*.csv\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 34,
    "id": "b4862479",
    "metadata": {},
    "outputs": [],
@@ -258,24 +246,28 @@
     "token_transfers_df.createOrReplaceTempView(\"token_transfers_df\")\n",
     "transactions_df.createOrReplaceTempView(\"transactions_df\")\n",
     "tokens_df.createOrReplaceTempView(\"tokens_df\")\n",
-    "cmc_historicals_df.createOrReplaceTempView(\"cmc_historicals_df\")"
+    "cmc_historicals_df.createOrReplaceTempView(\"cmc_historicals_df\")\n",
+    "cmc_addresses_df.createOrReplaceTempView(\"cmc_addresses_df\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "id": "16a4e626",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# change \"cmc_addr.bsc\" for each network\n",
+    "\n",
     "token_volume_result_df = spark.sql(\"\"\"\n",
-    "SELECT  tt.token_address, cmc.timestamp, sum((tt.value / POWER(10, t.decimals)) * cmc.open) as tx_volume\n",
+    "SELECT  tt.token_address, cmc_h.timestamp, sum((tt.value / POWER(10, t.decimals)) * cmc_h.open) as tx_volume\n",
     "FROM token_transfers_df tt\n",
     "JOIN transactions_df txn ON tt.transaction_hash = txn.hash\n",
     "JOIN tokens_df t ON LOWER(tt.token_address) = LOWER(t.address)\n",
-    "JOIN cmc_historicals_df cmc ON LOWER(cmc.address) = LOWER(tt.token_address)\n",
-    "WHERE txn.block_timestamp < cmc.timestamp AND txn.block_timestamp >  cmc.timestamp - 86400\n",
-    "GROUP BY tt.token_address, cmc.timestamp\n",
+    "JOIN cmc_addresses_df cmc_addr ON LOWER(tt.token_address) = LOWER(cmc_addr.bsc)\n",
+    "JOIN cmc_historicals_df cmc_h ON cmc_addr.rank = cmc_h.rank\n",
+    "WHERE txn.block_timestamp < cmc_h.timestamp AND txn.block_timestamp >  cmc_h.timestamp - 86400\n",
+    "GROUP BY tt.token_address, cmc_h.timestamp\n",
     "\"\"\")\n",
     "\n",
     "token_df = token_volume_result_df \\\n",
@@ -285,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "id": "8e424257",
    "metadata": {},
    "outputs": [
@@ -293,7 +285,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 17:===================================================>    (11 + 1) / 12]\r"
+      "\r",
+      "[Stage 39:>                                                       (0 + 12) / 12]\r"
      ]
     },
     {
@@ -303,16 +296,16 @@
       "+------------------------------------------+----------+---------------+\n",
       "|address                                   |timestamp |tx_volume      |\n",
       "+------------------------------------------+----------+---------------+\n",
-      "|0x2170ed0880ac9a755fd29b2688956bd959f933f8|1685318399|1054768.605324 |\n",
-      "|0xfce146bf3146100cfe5db4129cf6c82b0ef4ad8c|1685318399|0.000047       |\n",
-      "|0x9c65ab58d8d978db963e63f2bfb7121627e3a739|1685318399|14030.151616   |\n",
-      "|0xa4080f1778e69467e905b8d6f72f6e441f9e9484|1685318399|1657.252888    |\n",
-      "|0xbf5140a22578168fd562dccf235e5d43a02ce9b1|1685318399|21100.271899   |\n",
-      "|0x02caa44eb838fc0e49b73213d9d22e5f23798fda|1685318399|364.769479     |\n",
-      "|0x9fb9a33956351cf4fa040f65a13b835a3c8764e3|1685318399|223.021360     |\n",
+      "|0x2170ed0880ac9a755fd29b2688956bd959f933f8|1685318399|1054768.605568 |\n",
+      "|0x9c65ab58d8d978db963e63f2bfb7121627e3a739|1685318399|14030.151622   |\n",
+      "|0xbf5140a22578168fd562dccf235e5d43a02ce9b1|1685318399|21100.271901   |\n",
+      "|0x02caa44eb838fc0e49b73213d9d22e5f23798fda|1685318399|364.769481     |\n",
       "|0x4338665cbb7b2485a8855a139b75d5e34ab0db94|1685318399|161.363328     |\n",
-      "|0x156ab3346823b651294766e23e6cf87254d68962|1685318399|24406589.595120|\n",
+      "|0x156ab3346823b651294766e23e6cf87254d68962|1685318399|24406589.608481|\n",
       "|0xe552fb52a4f19e44ef5a967632dbc320b0820639|1685318399|0.743871       |\n",
+      "|0x58730ae0faa10d73b0cddb5e7b87c3594f7a20cb|1685318399|345.164841     |\n",
+      "|0xf4c8e32eadec4bfe97e0f595add0f4450a863a11|1685318399|252.739397     |\n",
+      "|0xba2ae424d960c26247dd6c32edc70b295c744c43|1685318399|101832.388480  |\n",
       "+------------------------------------------+----------+---------------+\n",
       "only showing top 10 rows\n",
       "\n"
@@ -322,6 +315,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "\r",
       "                                                                                \r"
      ]
     }
@@ -332,19 +326,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "id": "483d5ef1",
    "metadata": {},
    "outputs": [],
    "source": [
     "from_address_volume_result_df = spark.sql(\"\"\"\n",
-    "SELECT  tt.from_address, cmc.timestamp, sum((tt.value / POWER(10, t.decimals)) * cmc.open) as tx_volume\n",
+    "SELECT  tt.from_address, cmc_h.timestamp, sum((tt.value / POWER(10, t.decimals)) * cmc_h.open) as tx_volume\n",
     "FROM token_transfers_df tt\n",
     "JOIN transactions_df txn ON tt.transaction_hash = txn.hash\n",
     "JOIN tokens_df t ON LOWER(tt.token_address) = LOWER(t.address)\n",
-    "JOIN cmc_historicals_df cmc ON LOWER(cmc.address) = LOWER(tt.token_address)\n",
-    "WHERE txn.block_timestamp < cmc.timestamp AND txn.block_timestamp >  cmc.timestamp - 86400\n",
-    "GROUP BY tt.from_address, cmc.timestamp\n",
+    "JOIN cmc_addresses_df cmc_addr ON LOWER(tt.token_address) = LOWER(cmc_addr.bsc)\n",
+    "JOIN cmc_historicals_df cmc_h ON cmc_addr.rank = cmc_h.rank\n",
+    "WHERE txn.block_timestamp < cmc_h.timestamp AND txn.block_timestamp >  cmc_h.timestamp - 86400\n",
+    "GROUP BY tt.from_address, cmc_h.timestamp\n",
     "\"\"\")\n",
     "\n",
     "from_df = from_address_volume_result_df \\\n",
@@ -354,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 39,
    "id": "40df7523",
    "metadata": {},
    "outputs": [
@@ -362,27 +357,27 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 32:========================================>            (152 + 12) / 200]\r"
+      "[Stage 51:==========================>                              (6 + 7) / 13]\r"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------------------------------------------+----------+-----------+\n",
-      "|address                                   |timestamp |tx_volume  |\n",
-      "+------------------------------------------+----------+-----------+\n",
-      "|0x344ecc034d92db380a219d4345f2d1690d22e11b|1685318399|29.285650  |\n",
-      "|0x914558fddb93aa9b32b0e8e662673515b0f2e4ae|1685318399|822.841602 |\n",
-      "|0x76f4a2cd95bf5a0754011998ad893f55bb079a72|1685318399|1343.790739|\n",
-      "|0x3b756446c61b4702b34475022ae1851ba1a36691|1685318399|0.000000   |\n",
-      "|0xd6ff684aa01b676d0cc7cbc40a154dbf9d3d3079|1685318399|265.432143 |\n",
-      "|0x3d6d3ff403d82afb0673ae4182dfb1ad7ecbe5a8|1685318399|200.110599 |\n",
-      "|0x27bbe1d6c6b04694a94b2280ab5c424f54527b01|1685318399|300.165899 |\n",
-      "|0x95c95656f694a665cadc98b3f2d5da44f3404e81|1685318399|0.122929   |\n",
-      "|0xc108a9e4e1b4e2db4ac5a43bdda75f126d634caf|1685318399|219.351533 |\n",
-      "|0x88eb5797d4fd1adb62a8d73b2ba146c46d9e245d|1685318399|1.196090   |\n",
-      "+------------------------------------------+----------+-----------+\n",
+      "+------------------------------------------+----------+-------------+\n",
+      "|address                                   |timestamp |tx_volume    |\n",
+      "+------------------------------------------+----------+-------------+\n",
+      "|0x344ecc034d92db380a219d4345f2d1690d22e11b|1685318399|29.285650    |\n",
+      "|0x7623a96f97ee37c50405b1bd162ff9bc380f7b60|1685318399|211.136693   |\n",
+      "|0xc108a9e4e1b4e2db4ac5a43bdda75f126d634caf|1685318399|219.351533   |\n",
+      "|0x914558fddb93aa9b32b0e8e662673515b0f2e4ae|1685318399|822.841602   |\n",
+      "|0xc2b3dbbf26d43617036b0eba53ad2dbd945adebf|1685318399|834103.919891|\n",
+      "|0x0c59a054d7ec1248c1f84fd88030ac00baa71622|1685318399|282.330608   |\n",
+      "|0x63e95e19f24a7675d8adbd6f38d3c0f77bf87185|1685318399|9988.778241  |\n",
+      "|0x9fe0d567c52663d371477b27d216b6d20d260a4d|1685318399|0.000000     |\n",
+      "|0x2641bc9d55daf3ce52a06fa9d307c989951a5a03|1685318399|5583.014773  |\n",
+      "|0x00692189a7f61483bdb67f11ec28197fae9d7755|1685318399|9105.032255  |\n",
+      "+------------------------------------------+----------+-------------+\n",
       "only showing top 10 rows\n",
       "\n"
      ]
@@ -391,6 +386,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "\r",
       "                                                                                \r"
      ]
     }
@@ -401,19 +397,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 40,
    "id": "74b4ec8d",
    "metadata": {},
    "outputs": [],
    "source": [
     "to_address_volume_result_df = spark.sql(\"\"\"\n",
-    "SELECT  tt.to_address, cmc.timestamp, sum((tt.value / POWER(10, t.decimals)) * cmc.open) as tx_volume\n",
+    "SELECT  tt.to_address, cmc_h.timestamp, sum((tt.value / POWER(10, t.decimals)) * cmc_h.open) as tx_volume\n",
     "FROM token_transfers_df tt\n",
     "JOIN transactions_df txn ON tt.transaction_hash = txn.hash\n",
     "JOIN tokens_df t ON LOWER(tt.token_address) = LOWER(t.address)\n",
-    "JOIN cmc_historicals_df cmc ON LOWER(cmc.address) = LOWER(tt.token_address)\n",
-    "WHERE txn.block_timestamp < cmc.timestamp AND txn.block_timestamp >  cmc.timestamp - 86400\n",
-    "GROUP BY tt.to_address, cmc.timestamp\n",
+    "JOIN cmc_addresses_df cmc_addr ON LOWER(tt.token_address) = LOWER(cmc_addr.bsc)\n",
+    "JOIN cmc_historicals_df cmc_h ON cmc_addr.rank = cmc_h.rank\n",
+    "WHERE txn.block_timestamp < cmc_h.timestamp AND txn.block_timestamp >  cmc_h.timestamp - 86400\n",
+    "GROUP BY tt.to_address, cmc_h.timestamp\n",
     "\"\"\")\n",
     "\n",
     "to_df = to_address_volume_result_df \\\n",
@@ -423,44 +420,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "id": "671fe8ba",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[Stage 38:======================================>              (146 + 12) / 200]\r"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+------------------------------------------+----------+-----------+\n",
-      "|address                                   |timestamp |tx_volume  |\n",
-      "+------------------------------------------+----------+-----------+\n",
-      "|0x2641bc9d55daf3ce52a06fa9d307c989951a5a03|1685318399|5583.014773|\n",
-      "|0x56ed0f243c8bd05c84ede4dafcafa69d1cec7240|1685318399|0.000000   |\n",
-      "|0xab78ba5e13bc29c742aba5bb7ebcc0cdc6969db5|1685318399|99.745186  |\n",
-      "|0x44f354aa259023b929b7a7b6d168259902334e31|1685318399|0.000000   |\n",
-      "|0x277cdce833e22d68bcddd504aef3a31ca7c584f8|1685318399|53.731171  |\n",
-      "|0x3538e99b0ad36179ecd8c1815664bbc56208e468|1685318399|0.000000   |\n",
-      "|0x317f03573b16b993c469473b0c8dc564df1db18c|1685318399|51.365714  |\n",
-      "|0x88eb5797d4fd1adb62a8d73b2ba146c46d9e245d|1685318399|0.001592   |\n",
-      "|0x04442b93e0ae32f1aa197bbc94e0b7fcf08a8524|1685318399|28.107658  |\n",
-      "|0x8df5e62c8c77434547bbf3dd7528e550e80b1734|1685318399|465.070860 |\n",
-      "+------------------------------------------+----------+-----------+\n",
+      "+------------------------------------------+----------+-------------+\n",
+      "|address                                   |timestamp |tx_volume    |\n",
+      "+------------------------------------------+----------+-------------+\n",
+      "|0x8126a1c71e1b5562393f65c8fe911d0c0352af72|1685318399|0.000000     |\n",
+      "|0x84623f450a0af538ae3a52539633d784b664dad1|1685318399|1.163274     |\n",
+      "|0x074eb000792e3710c864f8bf2478afc8df92d8cb|1685318399|0.000000     |\n",
+      "|0x56ed0f243c8bd05c84ede4dafcafa69d1cec7240|1685318399|0.000000     |\n",
+      "|0x04442b93e0ae32f1aa197bbc94e0b7fcf08a8524|1685318399|28.107658    |\n",
+      "|0xc2b3dbbf26d43617036b0eba53ad2dbd945adebf|1685318399|402938.579057|\n",
+      "|0x62679a86f0f537a2b4e40af3305f5cee742750d9|1685318399|54.935376    |\n",
+      "|0x92e4203baadb385d1355d3b5a822a084337749cf|1685318399|0.000000     |\n",
+      "|0x8df5e62c8c77434547bbf3dd7528e550e80b1734|1685318399|465.070860   |\n",
+      "|0x277cdce833e22d68bcddd504aef3a31ca7c584f8|1685318399|53.731171    |\n",
+      "+------------------------------------------+----------+-------------+\n",
       "only showing top 10 rows\n",
       "\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "                                                                                \r"
      ]
     }
    ],
@@ -470,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 42,
    "id": "3b65d0a9",
    "metadata": {},
    "outputs": [],
@@ -480,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 43,
    "id": "3072718e",
    "metadata": {},
    "outputs": [
@@ -488,7 +471,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 48:========================================>            (153 + 12) / 200]\r"
+      "[Stage 81:>                                                       (0 + 12) / 13]\r"
      ]
     },
     {
@@ -498,16 +481,16 @@
       "+------------------------------------------+----------+---------------+\n",
       "|address                                   |timestamp |tx_volume      |\n",
       "+------------------------------------------+----------+---------------+\n",
-      "|0x2170ed0880ac9a755fd29b2688956bd959f933f8|1685318399|1054768.605324 |\n",
-      "|0xfce146bf3146100cfe5db4129cf6c82b0ef4ad8c|1685318399|0.000047       |\n",
-      "|0x9c65ab58d8d978db963e63f2bfb7121627e3a739|1685318399|14030.151616   |\n",
-      "|0xa4080f1778e69467e905b8d6f72f6e441f9e9484|1685318399|1657.252888    |\n",
-      "|0xbf5140a22578168fd562dccf235e5d43a02ce9b1|1685318399|21100.271899   |\n",
-      "|0x02caa44eb838fc0e49b73213d9d22e5f23798fda|1685318399|364.769479     |\n",
-      "|0x9fb9a33956351cf4fa040f65a13b835a3c8764e3|1685318399|223.021360     |\n",
+      "|0x2170ed0880ac9a755fd29b2688956bd959f933f8|1685318399|1054768.605568 |\n",
+      "|0x9c65ab58d8d978db963e63f2bfb7121627e3a739|1685318399|14030.151622   |\n",
+      "|0xbf5140a22578168fd562dccf235e5d43a02ce9b1|1685318399|21100.271901   |\n",
+      "|0x02caa44eb838fc0e49b73213d9d22e5f23798fda|1685318399|364.769481     |\n",
       "|0x4338665cbb7b2485a8855a139b75d5e34ab0db94|1685318399|161.363328     |\n",
-      "|0x156ab3346823b651294766e23e6cf87254d68962|1685318399|24406589.595120|\n",
+      "|0x156ab3346823b651294766e23e6cf87254d68962|1685318399|24406589.608481|\n",
       "|0xe552fb52a4f19e44ef5a967632dbc320b0820639|1685318399|0.743871       |\n",
+      "|0x58730ae0faa10d73b0cddb5e7b87c3594f7a20cb|1685318399|345.164841     |\n",
+      "|0xf4c8e32eadec4bfe97e0f595add0f4450a863a11|1685318399|252.739397     |\n",
+      "|0xba2ae424d960c26247dd6c32edc70b295c744c43|1685318399|101832.388480  |\n",
       "+------------------------------------------+----------+---------------+\n",
       "only showing top 10 rows\n",
       "\n"
@@ -517,6 +500,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "\r",
       "                                                                                \r"
      ]
     }
@@ -535,7 +519,14 @@
     "# result_df.repartition(1) \\\n",
     "#     .write \\\n",
     "#     .option(\"header\",True) \\\n",
-    "#     .csv(basePath + \"/tx-volumes/\")"
+    "#     .csv(basePath + \"/tx-volumes/\")\n",
+    "\n",
+    "# %%html\n",
+    "# <style>\n",
+    "# div.output_area pre {\n",
+    "#     white-space: pre;\n",
+    "# }\n",
+    "# </style>"
    ]
   }
  ],
@@ -555,7 +546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
